Master Page and folder structure updates

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     </head>
   
 	<body>
-        <div id="r-content" class="content-wrapper"></div>   
-        <script type="text/jsx" src="assets/jsx/content.jsx"> </script>
+        <div id="app" class="content-wrapper"></div> 
+        <script type="text/jsx" src="assets/jsx/app.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/musicians.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/creators.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/blog.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/contact.jsx"> </script>
         <script type="text/jsx" src="login/assets/jsx/login.jsx"> </script>
         
         <!-- Core JS Files -->
