Master Page Updates: Member Pages Navigation and Components

--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
   
 	<body>
         <div id="app" class="content-wrapper"></div> 
+		
+        <!-- JSX Component Files -->
         <script type="text/jsx" src="assets/jsx/app.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/musicians.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/creators.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/blog.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/contact.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/creatorprofile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artistprofile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/songlist.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/profilesettings.jsx"> </script>
         <script type="text/jsx" src="login/assets/jsx/login.jsx"> </script>
         
         <!-- Core JS Files -->
