starting new branch

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <!-- CSS Files -->
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-        
+        <link rel="stylesheet" href="assets/css/artist.css">
         <link href="login/assets/css/login.css" rel="stylesheet">
         <link href="assets/css/style.css" rel="stylesheet">
     </head>
@@ -26,7 +26,8 @@
         <script type="text/jsx" src="assets/jsx/blog.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/contact.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/creatorprofile.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artistprofile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/artistprofile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/artist-header.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/songlist.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/profilesettings.jsx"> </script>
         <script type="text/jsx" src="login/assets/jsx/login.jsx"> </script>
