added header and stats bar

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         <script type="text/jsx" src="assets/jsx/blog.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/contact.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/creatorprofile.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist/artistprofile.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist/artist-header.jsx"> </script>
+        <!-- Artist -->
+        <script type="text/jsx" src="assets/jsx/artist-components/artistprofile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-header.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-stats-bar.jsx"> </script>
+
+
         <script type="text/jsx" src="assets/jsx/songlist.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/profilesettings.jsx"> </script>
         <script type="text/jsx" src="login/assets/jsx/login.jsx"> </script>
