added added timeline and right side bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <!-- Fonts and icons -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="assets/js/artist.js"></script>
         
         <!-- CSS Files -->
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -30,6 +32,8 @@
         <script type="text/jsx" src="assets/jsx/artist-components/artistprofile.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-header.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-stats-bar.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-timeline.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-sidebar-right.jsx"> </script>
 
 
         <script type="text/jsx" src="assets/jsx/songlist.jsx"> </script>
