--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- CSS Files -->
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="assets/css/creator.css">
+        <link rel="stylesheet" href="assets/css/artist.css">
         <link href="login/assets/css/login.css" rel="stylesheet">
         <link href="assets/css/style.css" rel="stylesheet">
         <script>
@@ -36,7 +37,10 @@
         <script type="text/jsx" src="assets/jsx/contact.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/creator-components/creatorprofile.jsx"> </script>
         <!-- Artist -->
-        <script type="text/jsx" src="assets/jsx/artistprofile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artistprofile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-navBar.jsx"> </script>
+
+        <!-- Creators -->
         <script type="text/jsx" src="assets/jsx/creator-components/creator-header.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/creator-components/creator-stats-bar.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/creator-components/creator-timeline.jsx"> </script>
