--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <!-- Artist -->
         <script type="text/jsx" src="assets/jsx/artist-components/artistprofile.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-navBar.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-featured.jsx"> </script>
 
         <!-- Creators -->
         <script type="text/jsx" src="assets/jsx/creator-components/creator-header.jsx"> </script>
