push for melaina/davith code merge

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <script type="text/jsx" src="assets/jsx/artist-components/artist-navBar.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-featured.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-main-content.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-sidebar.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-upload.jsx"> </script>
 
         <!-- Creators -->
         <script type="text/jsx" src="assets/jsx/creator-components/creator-header.jsx"> </script>
