System Nav Update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <meta name="google-signin-client_id" content="121745528258-fqreo4vned09p9uf4pu2kkbijr1i1udu.apps.googleusercontent.com">
+        <meta name="google-SignIn-client_id" content="121745528258-fqreo4vned09p9uf4pu2kkbijr1i1udu.apps.googleusercontent.com">
         
         <!-- Fonts and icons -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
