--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
         <div id="app" class="content-wrapper"></div> 
         
         <!-- JSX Component Files -->
+        <script type="text/jsx" src="assets/jsx/filter-nav.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/app.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/musicians.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/creators.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/blog.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/contact.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/creator-components/creatorprofile.jsx"> </script>
-        
+
         <!-- Artist -->
         <script type="text/jsx" src="assets/jsx/artist-components/artistprofile.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-navBar.jsx"> </script>
