added upload view

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <link rel="stylesheet" href="assets/css/playlist.css">
         <link rel="stylesheet" href="assets/css/artist-search.css">
+        <link rel="stylesheet" href="assets/css/artist-internal.css">
         <link href="login/assets/css/login.css" rel="stylesheet">
         <link href="assets/css/style.css" rel="stylesheet">
     </head>
@@ -39,6 +40,7 @@
         <script type="text/jsx" src="assets/jsx/artist-components/artist-main-content.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-sidebar.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-library-table.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-upload.jsx"> </script>
 
         <!-- Creators -->
