--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <link rel="stylesheet" href="assets/css/nav.css">
         <link rel="stylesheet" href="login/assets/css/login.css">
+        <link rel="stylesheet" href="assets/css/icons.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
         <link rel="stylesheet" href="assets/css/playlist.css">
