--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-sidebar.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-library-table.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-downloads.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-plays.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-top-interests.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-upload.jsx"> </script>
 
         <!-- Creators -->
