--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-downloads.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-plays.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-top-interests.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-account-settings.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-account-navbar.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-upload.jsx"> </script>
 
         <!-- Creators -->
