Login Update and Who Are You page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         
         <!-- JSX Component Files -->
         <script type="text/jsx" src="assets/jsx/login.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/whoareyou.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/filter-nav.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/app.jsx"> </script>
 
