--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-plays.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-top-interests.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-account-settings.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist-components/artist-account-view.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-account-navbar.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist-components/artist-upload.jsx"> </script>
 
