So fresh and so clean CLEAN!

--- a/index.html
+++ b/index.html
@@ -30,49 +30,50 @@
         <!-- JSX Component Files -->
         <script type="text/jsx" src="assets/jsx/login.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/whoareyou.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/filter-nav.jsx"> </script>
-
-        <script type="text/jsx" src="assets/jsx/profilesettings.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/creator-components/creatorprofile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/filterNav.jsx"> </script>
 
         <!-- Artist -->
-        <script type="text/jsx" src="assets/jsx/artist-components/artistprofile.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-navBar.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-featured.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-main-content.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-sidebar.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-library-table.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-downloads.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-plays.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-internal-analytics-top-interests.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-account-settings.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-account.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-password.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-contact-info.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-account-navbar.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-connected-accounts.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-notification.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-components/artist-upload.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/externalProfile/profileMain.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/externalProfile/featured.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/externalProfile/content.jsx"> </script>
+
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/sidebar.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/profileMain.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/library.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/upload.jsx"> </script>
+
+        <script type="text/jsx" src="assets/jsx/artist/settings/settingsMain.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/settings/account.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/settings/password.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/settings/contactInfo.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/settings/sidebar.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/settings/connectedAccounts.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/settings/notification.jsx"> </script>
 
         <!-- Creators -->
-        <script type="text/jsx" src="assets/jsx/creator-components/creator-header.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/creator-components/creator-stats-bar.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/creator-components/creator-timeline.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/creator-components/creator-sidebar-right.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-search-components/creator-artist-search.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-search-components/artist-search-side-bar.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-search-components/search-results-table.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/artist-search-components/artist-search-mobile.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/creator/profileMain.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/creator/header.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/creator/stats.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/creator/timeline.jsx"> </script>
 
+        <!-- Artist Search -->
+        <script type="text/jsx" src="assets/jsx/artistSearch/searchMain.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artistSearch/sidebar.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artistSearch/results.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artistSearch/mobile.jsx"> </script>
 
         <!-- Playlist -->
-        <script type="text/jsx" src="assets/jsx/playlist-components/playlist.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/playlist-components/playlist-header.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/playlist-components/playlist-table.jsx"> </script>
-        <script type="text/jsx" src="assets/jsx/playlist-components/playlist-mobile-view.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/playlist/playlistMain.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/playlist/header.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/playlist/songList.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/playlist/mobile.jsx"> </script>
         
+        <!-- Analytics -->
+        <script type="text/jsx" src="assets/jsx/analytics/analyticsMain.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/analytics/downloads.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/analytics/plays.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/analytics/topInterests.jsx"> </script>
+
         <script type="text/jsx" src="assets/jsx/app.jsx"> </script>
         
         <!-- Core JS Files -->
