CSS Cleanup & Stylesheet

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <link rel="stylesheet" href="assets/css/nav.css">
         <link rel="stylesheet" href="assets/css/login.css">
         <link rel="stylesheet" href="assets/css/icons.css">
+        <link rel="stylesheet" href="assets/css/form.css">
+        <link rel="stylesheet" href="assets/css/colors.css">
+        <link rel="stylesheet" href="assets/css/variables.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
         <link rel="stylesheet" href="assets/css/playlist.css">
