--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
         
         <!-- CSS Files -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="assets/css/creator.css">
-        <link rel="stylesheet" href="assets/css/artist.css">
 
         <link rel="stylesheet" href="assets/css/nav.css">
-        <link rel="stylesheet" href="assets/css/login.css">
         <link rel="stylesheet" href="assets/css/icons.css">
         <link rel="stylesheet" href="assets/css/form.css">
-        <link rel="stylesheet" href="assets/css/colors.css">
-        <link rel="stylesheet" href="assets/css/variables.css">
-        <link rel="stylesheet" href="assets/css/style.css">
 
+        <link rel="stylesheet" href="assets/css/login.css">
+        <link rel="stylesheet" href="assets/css/creator.css">
+        <link rel="stylesheet" href="assets/css/artist.css">
         <link rel="stylesheet" href="assets/css/playlist.css">
         <link rel="stylesheet" href="assets/css/artist-search.css">
         <link rel="stylesheet" href="assets/css/artist-internal.css">
+
+        <link rel="stylesheet/less" type="text/css" href="assets/css/variables.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/css/colors.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/css/style.less" />
     </head>
   
     <body>
@@ -94,5 +95,7 @@
 
         <!-- In-browser JSX transformer, remove when pre-compiling JSX. -->
         <script src="http://fb.me/JSXTransformer-0.13.3.js"></script>
+
+        <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script>
     </body>
 </html>
