--- a/stylesheet.html
+++ b/stylesheet.html
@@ -9,14 +9,21 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
         
         <!-- CSS Files -->
+
         <link rel="stylesheet" href="assets/css/icons.css">
         <link rel="stylesheet" href="assets/css/form.css">
-        <link rel="stylesheet" href="assets/css/colors.css">
-        <link rel="stylesheet" href="assets/css/variables.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+
+        <link rel="stylesheet/less" type="text/css" href="assets/css/variables.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/css/colors.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/css/style.less" />
     </head>
   
     <body style="background: #fff;">
+<div class="box">
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+</div>
+
         <a href="http://d2pziso4zk2lvf.cloudfront.net/fontdemo.html"><i class="icon-star"></i> Icons <i class="icon-star"></i></a>
         <div class="pad-box-sm">
             <div class="bg-grey-5 pad-box-sm"><h1>Heading 1</h1></div>
@@ -46,5 +53,7 @@
                 <div class="pad-box-sm bg-grad-1 white">Gradient 1 bg w/ White Text</div>
             </div>
         </div>
+
+        <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.min.js"></script>
     </body>
 </html>
