--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <link rel="stylesheet" href="assets/css/artist.css">
         <link rel="stylesheet" href="assets/css/playlist.css">
         <link rel="stylesheet" href="assets/css/artist-search.css">
-        <link rel="stylesheet" href="assets/css/artist-internal.css">
 
         <link rel="stylesheet/less" type="text/css" href="assets/css/variables.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/css/colors.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/css/style.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/css/artist-internal.less">
     </head>
   
     <body>
