revised artist library section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <script type="text/jsx" src="assets/jsx/artist/internalProfile/profileMain.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist/internalProfile/library.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist/internalProfile/upload.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/libraryMain.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/libraryApproved.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/libraryPending.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/libraryDisabled.jsx"> </script>
+        <script type="text/jsx" src="assets/jsx/artist/internalProfile/libraryRejected.jsx"> </script>
 
         <script type="text/jsx" src="assets/jsx/artist/settings/settingsMain.jsx"> </script>
         <script type="text/jsx" src="assets/jsx/artist/settings/account.jsx"> </script>
