--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/playlist.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-search.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-internal.less">
+        
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/tablet.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/mobile.less" />
     </head>
   
     <body>
