Update stylesheet.html links
as well as style.less and tablet.less

--- a/stylesheet.html
+++ b/stylesheet.html
@@ -13,9 +13,9 @@
         <link rel="stylesheet" href="assets/css/icons.css">
         <link rel="stylesheet" href="assets/css/form.css">
 
-        <link rel="stylesheet/less" type="text/css" href="assets/css/variables.less" />
-        <link rel="stylesheet/less" type="text/css" href="assets/css/colors.less" />
-        <link rel="stylesheet/less" type="text/css" href="assets/css/style.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/variables.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/colors.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/style.less" />
     </head>
   
     <body style="background: #fff;">
