Nav hover state and app.jsx cleanup

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/playlist.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-search.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-internal.less">
+
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/library.less">
         
-        <link rel="stylesheet/less" type="text/css" href="assets/styles/tablet.less" />
-        <link rel="stylesheet/less" type="text/css" href="assets/styles/mobile.less" />
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/tablet.less">
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/mobile.less">
     </head>
   
     <body>
@@ -45,14 +47,8 @@
 
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/sidebar.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/profileMain.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artist/internalProfile/library.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/upload.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/uploadSuccess.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artist/internalProfile/libraryMain.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artist/internalProfile/libraryApproved.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artist/internalProfile/libraryPending.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artist/internalProfile/libraryDisabled.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artist/internalProfile/libraryRejected.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/artist/settings/settingsMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/settings/account.jsx"> </script>
