--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-search.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-internal.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/library.less">
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/header.less">
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-table.less">
         
         <link rel="stylesheet/less" type="text/css" href="assets/styles/tablet.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/mobile.less">
@@ -49,7 +51,6 @@
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/upload.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/uploadSuccess.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/libraryMain.jsx"> </script>
-
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/libraryResultTable.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/artist/settings/settingsMain.jsx"> </script>
@@ -71,6 +72,10 @@
         <script type="text/jsx" src="assets/scripts/artistSearch/sidebar.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artistSearch/results.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artistSearch/mobile.jsx"> </script>
+
+        <script type="text/jsx" src="assets/scripts/artistProfile/profileMain.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artistProfile/header.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTable.jsx"> </script>
 
         <!-- Playlist -->
         <script type="text/jsx" src="assets/scripts/playlist/playlistMain.jsx"> </script>
