--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/profileMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/upload.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/uploadSuccess.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/downloadNotice.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/artist/settings/settingsMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/settings/account.jsx"> </script>
