--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/upload.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/uploadSuccess.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/downloadNotice.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artist/internalProfile/tagSuccess.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTable.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artistProfile/header.jsx"> </script>
