Add C3 and D3 files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         
         <!-- CSS Files -->
         <link rel="stylesheet" href="assets/styles/bootstrap.min.css" />
+        <link rel="stylesheet" href="assets/styles/c3.min.css" type="text/css">
         <link rel="stylesheet" href="assets/styles/icons.css">
 
         <link rel="stylesheet/less" type="text/css" href="assets/styles/variables.less" />
@@ -103,7 +104,8 @@
         <!-- Admin -->
         <script type="text/jsx" src="assets/scripts/admin/adminMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/admin/adminDashboard.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/admin/adminNewSubmissions.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/admin/adminNewSubmissions.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/admin/adminChart.jsx"></script>
 
 
         <script type="text/jsx" src="assets/scripts/app.jsx"> </script>
@@ -113,6 +115,8 @@
         <script type="text/javascript" src="assets/scripts/bootstrap.min.js"></script>
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <script type="text/javascript" src="assets/scripts/player.js"></script>
+        <script src="assets/scripts/d3.v3.min.js" charset="utf-8"></script>
+        <script src="assets/scripts/c3.min.js"></script>
 
         <!-- React -->
         <script src="http://fb.me/react-0.14.7.js"></script>
