--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist-table.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/header.less">
 
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/footer.less">
+
         <link rel="stylesheet/less" type="text/css" href="assets/styles/library.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/admin.less">
         <link rel="stylesheet/less" type="text/css" href="assets/styles/player.less">
@@ -45,6 +47,7 @@
         <script type="text/jsx" src="assets/scripts/whoareyou.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/filterNav.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/player.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/footer.jsx"> </script>
 
         <!-- Artist -->
         <script type="text/jsx" src="assets/scripts/artist/externalProfile/profileMain.jsx"> </script>
