--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <script type="text/jsx" src="assets/scripts/admin/adminMain.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/admin/adminDashboard.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/admin/adminNewSubmissions.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/admin/adminNewCreators.jsx"></script>
         <script type="text/jsx" src="assets/scripts/admin/adminChart.jsx"></script>
 
 
