Add Admin New Artist

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         <script type="text/jsx" src="assets/scripts/admin/adminDashboard.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/admin/adminNewSubmissions.jsx"></script>
         <script type="text/jsx" src="assets/scripts/admin/adminNewCreators.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/admin/adminNewArtists.jsx"></script>
         <script type="text/jsx" src="assets/scripts/admin/adminChart.jsx"></script>
 
 
