Add Payment Options

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet/less" type="text/css" href="assets/styles/form.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/nav.less" />
 
+        <link rel="stylesheet/less" type="text/css" href="assets/styles/payment-options.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/login.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/creator.less" />
         <link rel="stylesheet/less" type="text/css" href="assets/styles/artist.less" />
@@ -49,6 +50,7 @@
         <script type="text/jsx" src="assets/scripts/filterNav.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/player.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/footer.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/paymentOptions.jsx"></script>
 
         <!-- Artist -->
         <script type="text/jsx" src="assets/scripts/artist/externalProfile/profileMain.jsx"> </script>
