--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <script type="text/jsx" src="assets/scripts/player.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/footer.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/paymentOptions.jsx"></script>
+        <script type="text/jsx" src="assets/scripts/welcomeModal.jsx"></script>
 
         <!-- Artist -->
         <script type="text/jsx" src="assets/scripts/artist/externalProfile/profileMain.jsx"> </script>
