separate menu components from app.jsx

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div id="app" class="content-wrapper"></div> 
         
         <!-- JSX Component Files -->
+        <script type="text/jsx" src="assets/scripts/header.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/login.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/whoareyou.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/filterNav.jsx"> </script>
@@ -68,11 +69,7 @@
         <script type="text/jsx" src="assets/scripts/artist/internalProfile/tagSuccess.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTable.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artistProfile/header.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artistProfile/profileMain.jsx"> </script>
-
-        <script type="text/jsx" src="assets/scripts/artistProfile/artistProfileTable.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/artistProfile/header.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/artistProfile/profileHeader.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/artistProfile/profileMain.jsx"> </script>
 
         <script type="text/jsx" src="assets/scripts/artist/settings/settingsMain.jsx"> </script>
@@ -85,7 +82,7 @@
 
         <!-- Creators -->
         <script type="text/jsx" src="assets/scripts/creator/profileMain.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/creator/header.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/creator/profileHeader.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/creator/stats.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/creator/timeline.jsx"> </script>
 
@@ -101,7 +98,7 @@
 
         <!-- Playlist -->
         <script type="text/jsx" src="assets/scripts/playlist/playlistMain.jsx"> </script>
-        <script type="text/jsx" src="assets/scripts/playlist/header.jsx"> </script>
+        <script type="text/jsx" src="assets/scripts/playlist/playlistHeader.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/playlist/playlistTable.jsx"> </script>
         <script type="text/jsx" src="assets/scripts/playlist/mobile.jsx"> </script>
 
